--- a/config/config.json
+++ b/config/config.json
@@ -2,22 +2,25 @@
   "development": {
     "username": "root",
     "password": "password",
-    "database": "burgers_db",
+    "database": "burger_db",
     "host": "127.0.0.1",
+    "port": 3306,
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "password",
+    "database": "burger_db",
     "host": "127.0.0.1",
+    "port": 3306,
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
+    "password": "password",
+    "database": "burger_db",
     "host": "127.0.0.1",
+    "port": 3306,
     "dialect": "mysql"
   }
 }
