--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/kchoi123/Burger-2-The-Sequel#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
     "mysql2": "^1.6.5",
     "sequelize": "^5.2.12"
   }
