--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
     "username": "egsxprseov736r0b",
     "password": "o2tjz21z7o5h7pwe",
     "database": "pz6fe72y7vgxmaby",
-    "host": "cig4l2op6r0fxymw.cbetxkdyhwsb.us-east-1.rds.amazonaws.com	",
+    "host": "cig4l2op6r0fxymw.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "port": 3306,
     "dialect": "mysql"
   },
@@ -16,10 +16,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "password",
-    "database": "burger_db",
-    "host": "127.0.0.1",
+    "username": "egsxprseov736r0b",
+    "password": "o2tjz21z7o5h7pwe",
+    "database": "pz6fe72y7vgxmaby",
+    "host": "cig4l2op6r0fxymw.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "port": 3306,
     "dialect": "mysql"
   }
